# rbft

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.megatx  LICENSE.md  Makefile  README.md  SECURITY.md  foundry.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/architecture/: overview.md  qbft.md
book/src/contracts/: cast.md  deploying.md  validator-set.md
book/src/getting-started/: installation.md  prerequisites.md
book/src/interacting/: erc20.md  load-testing.md  transactions.md
book/src/operations/: configuration.md  monitoring.md  troubleshooting.md
book/src/running/: docker.md  follower-nodes.md  kubernetes.md  local-testnet.md  validator-management.md
contracts/: QBFTValidatorSet.sol  QBFTValidatorSet.t.sol
crates/rbft/: Cargo.toml
crates/rbft-megatx/: Cargo.toml
crates/rbft-megatx/src/: main.rs
crates/rbft-node/: Cargo.toml  README.md
crates/rbft-node/src/: main.rs  metrics.rs  rbft_consensus.rs  rbft_node.rs
crates/rbft-node/src/rbft_consensus/: aligned_interval.rs  consensus_builder.rs  on_chain_config.rs  payload_validator.rs  rbft_protocol.rs  validator_builder.rs
crates/rbft-utils/: Cargo.toml
crates/rbft-utils/src/: constants.rs  genesis.rs  kube_namespace.rs  lib.rs  logjam.rs  main.rs  testnet.rs  types.rs  validator_management.rs
crates/rbft-utils/src/testnet/: docker.rs  kube.rs
crates/rbft-validator-inspector/: Cargo.toml
crates/rbft-validator-inspector/automation/: README.md  foundry.toml
crates/rbft-validator-inspector/automation/contracts/dsl/: InspectorCommands.sol  ValidatorInspectorScript.sol
crates/rbft-validator-inspector/automation/contracts/scripts/: ExamplePlan.sol
crates/rbft-validator-inspector/src/: cli.rs  main.rs
crates/rbft-validator-inspector/src/automation/: compiler.rs  mod.rs  runner.rs
crates/rbft-validator-inspector/src/commands/: chain_launch.rs  lifecycle.rs  mod.rs  process_manager.rs  spam.rs
crates/rbft-validator-inspector/src/config/: environment.rs  mod.rs  paths.rs
crates/rbft-validator-inspector/src/models/: events.rs  mod.rs  state.rs  validator.rs
crates/rbft-validator-inspector/src/rpc/: client.rs  mod.rs
crates/rbft-validator-inspector/src/ui/: mod.rs  render.rs
crates/rbft-validator-inspector/src/ui/components/: forms.rs  mod.rs  modal.rs  panels.rs  table.rs
crates/rbft-validator-inspector/src/utils/: mod.rs  ports.rs
crates/rbft/src/: lib.rs  node.rs  node_auxilliary_functions.rs  tests.rs  types.rs
crates/rbft/src/types/: blockchain.rs  configuration.rs  node_state.rs  qbft_message.rs  signature.rs
doc/: rbft-kube-runbook.md
monitoring/: docker-compose.yml  prometheus.yml
monitoring/exporter/: Dockerfile  collector.py  requirements.txt
monitoring/grafana/: grafana-monitoring-dashboard.json
scripts/: check_line_length.py  kill_node.sh  measure_proposer_kill.py  remove_submodules.sh  restart_node.sh  run_kube_testnet_with_tps.sh
scripts/kube/: rbft-megatx.yaml  rbft-monitor.yaml
