[workspace]
members = ["crates/rbft-node", "crates/rbft", "crates/rbft-validator-inspector", "crates/rbft-megatx", "crates/rbft-utils"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Reth dependencies
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }
reth-consensus-debug-client = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.1" }

# Alloy dependencies
alloy-consensus = { version = "1.4.3", default-features = false }
alloy-dyn-abi = "1.4.3"
alloy-eips = { version = "1.4.3", default-features = false }
alloy-genesis = { version = "1.4.3", default-features = false }
alloy-network = { version = "1.4.3", default-features = false }
alloy-primitives = { version = "1.4.3", default-features = false }
alloy-provider = { version = "1.4.3", features = ["reqwest"], default-features = false }
alloy-rlp = "0.3.12"
alloy-rpc-client = "1.4.3"
alloy-rpc-types = "1.4.3"
alloy-rpc-types-engine = "1.4.3"
alloy-rpc-types-eth = "1.4.3"
alloy-signer = "1.4.3"
alloy-signer-local = "1.4.3"
alloy-sol-macro = "1.4.3"
alloy-sol-types = "1.4.3"

