[workspace]
members = ["crates/rbft-node", "crates/rbft", "crates/rbft-validator-inspector", "crates/rbft-megatx", "crates/rbft-utils"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "1.10.1"
rust-version = "1.88"
license = "Apache-2.0"
homepage = "https://paradigmxyz.github.io/reth"
repository = "https://github.com/paradigmxyz/reth"

[workspace.dependencies]
# Reth dependencies
reth-basic-payload-builder = { path = "/home/amy/play/reth/crates/payload/basic" }
reth-payload-builder = { path = "/home/amy/play/reth/crates/payload/builder" }
reth-ethereum = { path = "/home/amy/play/reth/crates/ethereum/reth" }
reth-ethereum-payload-builder = { path = "/home/amy/play/reth/crates/ethereum/payload" }
reth-ethereum-primitives = { path = "/home/amy/play/reth/crates/ethereum/primitives" }
reth-consensus-debug-client = { path = "/home/amy/play/reth/crates/consensus/debug-client" }
reth-consensus-common = { path = "/home/amy/play/reth/crates/consensus/common" }
reth-tasks = { path = "/home/amy/play/reth/crates/tasks" }
reth-network-peers = { path = "/home/amy/play/reth/crates/net/peers" }
reth-provider = { path = "/home/amy/play/reth/crates/storage/provider" }

# Alloy dependencies
alloy-consensus = { version = "1.4.3", default-features = false }
alloy-dyn-abi = "1.4.3"
alloy-eips = { version = "1.4.3", default-features = false }
alloy-genesis = { version = "1.4.3", default-features = false }
alloy-network = { version = "1.4.3", default-features = false }
alloy-primitives = { version = "1.4.3", default-features = false }
alloy-provider = { version = "1.4.3", features = ["reqwest"], default-features = false }
alloy-rlp = "0.3.12"
alloy-rpc-client = "1.4.3"
alloy-rpc-types = "1.4.3"
alloy-rpc-types-engine = "1.4.3"
alloy-rpc-types-eth = "1.4.3"
alloy-signer = "1.4.3"
alloy-signer-local = "1.4.3"
alloy-sol-macro = "1.4.3"
alloy-sol-types = "1.4.3"

[workspace.lints]

