[package]
name = "rbft-megatx"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
rbft-utils = { path = "../rbft-utils" }
alloy-consensus = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
eyre = "0.6"
rand = "0.8"
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
