[package]
name = "rbft-utils"
version = "0.0.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "rbft-utils"
path = "src/main.rs"

[lib]
name = "rbft_utils"
path = "src/lib.rs"

[dependencies]
# Internal dependencies
rbft = { path = "../rbft" }
reth-ethereum = { workspace = true, features = [
    "node",
    "pool",
    "cli",
] }
reth-network-peers = { workspace = true, features = [
    "secp256k1",
] }

alloy-primitives = { workspace = true }
alloy-genesis = { workspace = true }
alloy-consensus = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-signer = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-rlp = { workspace = true }

tracing = { version = "0.1.0", default-features = false }
eyre = "0.6"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
secp256k1 = "0.30.0"
chrono = "0.4"

# For genesis contract initialization
revm = { version = "24", default-features = false, features = ["std"] }

# For compiling Foundry contracts
foundry-compilers = { version = "0.11", features = ["svm-solc"] }
toml = "0.8"
soldeer-core = "0.5"
