[package]
name = "rbft-validator-inspector"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
futures = "0.3"
ratatui = "0.29"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "process", "net", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
url = "2.5"
dotenvy = "0.15"
shell-words = "1.1"
libc = "0.2"
which = "4.0"
alloy-dyn-abi = { workspace = true }
alloy-primitives = { workspace = true, features = ["std"] }
revm = { version = "24", default-features = false, features = ["std"] } 
